<resources>

    <string name="app_name">Buxoff</string>
    
    <string name="OK">OK</string>
    
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Buxoff</string>
    
    <string name="label_amount">Amount</string>
    <string name="hint_amount">Amount</string>
    
    <string name="label_desc">Description</string>
    <string name="hint_desc">Description</string>
    
    <string name="label_tags">Tags</string>
    <string name="hint_tags">Tags</string>
    
    <string name="label_acct">Account</string>
    <string name="hint_acct">Account</string>
    
    <string name="label_email">Email</string>
    <string name="hint_email">Buxfer Mobile Email</string>
    
    <string name="button_save_text">Save</string>
    <string name="button_push_text">Save &amp; Push</string>
    
    <string name="menu_logout">Logout</string>
    <string name="menu_show">Show Saved</string>
    <string name="menu_help">Help</string>
    
    <string name="email_prompt">Email Buxfer With&#8230;</string>
    
    <!-- dialog -->
    <string name="error_alert_dialog_ok">OK</string>
    <string name="error_alert_dialog_title">Validation Error</string>
    
    <!-- errors -->
    <string name="error_amount_empty">Amount can\'t be empty</string>
    <string name="error_desc_empty">Description can\'t be empty</string>
    <string name="error_tags_empty">Enter at least one tag</string>
    <string name="error_account_empty">Account can\'t be empty</string>
    <string name="error_email_empty">Email can\'t be empty. See Help section to learn how to get it.</string>
    
    <!-- Other -->
    <string name="_desc">desc</string>
    <string name="_preference_file">com.iutinvg.buxoff.pref</string>
    <string name="_auth_token">com.iutinvg.buxoff.api_token</string>
    <string name="_auth_username">com.iutinvg.buxoff.username</string>
    
</resources>