<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                style="@style/Label"
                android:layout_weight="40"
                android:text="@string/label_amount" />

            <TextView
                style="@style/Label"
                android:layout_weight="60"
                android:text="@string/label_desc" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/edit_amount"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                android:hint="@string/hint_amount"
                android:inputType="text|numberDecimal"
                android:nextFocusDown="@+id/edit_desc"
                android:selectAllOnFocus="true" >

                <requestFocus />
            </EditText>

            <AutoCompleteTextView
                android:id="@+id/edit_desc"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="60"
                android:completionThreshold="1"
                android:hint="@string/hint_desc"
                android:imeOptions="actionNext"
                android:inputType="textNoSuggestions"
                android:nextFocusDown="@+id/edit_tags"
                android:selectAllOnFocus="true"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                style="@style/Label"
                android:layout_weight="50"
                android:text="@string/label_tags" />

            <TextView
                style="@style/Label"
                android:layout_weight="50"
                android:text="@string/label_acct" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <AutoCompleteTextView
                android:id="@+id/edit_tags"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:completionThreshold="1"
                android:hint="@string/hint_tags"
                android:imeOptions="actionNext"
                android:inputType="textAutoComplete"
                android:nextFocusDown="@+id/edit_acct"
                android:selectAllOnFocus="true"
                android:textColor="#000000" />

            <AutoCompleteTextView
                android:id="@+id/edit_acct"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:completionThreshold="1"
                android:hint="@string/hint_acct"
                android:imeOptions="actionNext"
                android:inputType="textNoSuggestions"
                android:nextFocusDown="@+id/edit_email"
                android:selectAllOnFocus="true"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button_save"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:onClick="saveTransaction"
                android:text="@string/button_save_text" />

            <RelativeLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="50" >

                <Button
                    android:id="@+id/button_push"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:onClick="saveTransaction"
                    android:text="@string/button_push_text" />

                <TextView
                    android:id="@+id/text_counter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/counter_bg"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"
                    android:layout_marginRight="1dip"
                    android:textStyle="bold"
                    android:visibility="invisible"
                    android:textColor="#FFF" />
            </RelativeLayout>
        </LinearLayout>

        <TextView
            style="@style/Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_email" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" >
        </EditText>
    </LinearLayout>

</ScrollView>